Increased automation, but still getting Unknown error after 3-4 5 minutes files

--- a/SpeechRecognition.ipynb
+++ b/SpeechRecognition.ipynb
@@ -2,22 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<_io.BufferedRandom name='5min.wav'>"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!/usr/bin/env python3\n",
+    "\n",
+    "# Documentation\n",
+    "# https://github.com/jiaaro/pydub/blob/master/API.markdown\n",
     "\n",
     "import sys\n",
     "import speech_recognition as sr\n",
@@ -25,116 +17,179 @@
     "cm = ConfigManager().update('notebook', {'limit_output': 1000})\n",
     "\n",
     "# obtain path to \"english.wav\" in the same folder as this script\n",
-    "from os import path\n",
+    "import os.path\n",
     "from pydub import AudioSegment\n",
     "\n",
+    "import time # for delay\n",
+    "import random\n",
+    "\n",
     "# files                                                                         \n",
-    "src = \"5min.mp3\"\n",
-    "dst = \"5min.wav\"\n",
+    "#src = \"5min.mp3\"\n",
+    "#dst = \"5min.wav\"\n",
     "\n",
     "# convert wav to mp3                                                            \n",
-    "totrasn = AudioSegment.from_mp3(src)\n",
-    "totrasn.export(dst, format=\"wav\")"
+    "#totrasn = AudioSegment.from_mp3(src)\n",
+    "#totrasn.export(dst, format=\"wav\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Found 6 files to slice\n",
+      "file: 0 - Duration: 1200000\n",
       "0 300000 0\n",
-      "300000 600000 0\n",
-      "600000 900000 0\n",
-      "900000 1200000 0\n",
-      "1200000 1500000 1\n",
-      "1500000 1800000 1\n",
-      "1800000 2100000 1\n",
-      "2100000 2400000 1\n",
-      "2400000 2700000 2\n",
-      "2700000 3000000 2\n",
-      "3000000 3300000 2\n",
-      "3300000 3600000 2\n",
-      "3600000 3900000 3\n",
-      "3900000 4200000 3\n",
-      "4200000 4500000 3\n",
-      "4500000 4800000 3\n",
-      "4800000 5100000 4\n",
-      "5100000 5400000 4\n",
-      "5400000 5700000 4\n",
-      "5700000 6000000 4\n"
+      "300000 600000 1\n",
+      "600000 900000 2\n",
+      "900000 1200000 3\n",
+      "file: 1 - Duration: 1200000\n",
+      "0 300000 4\n",
+      "300000 600000 5\n",
+      "600000 900000 6\n",
+      "900000 1200000 7\n",
+      "file: 2 - Duration: 1200000\n",
+      "0 300000 8\n",
+      "300000 600000 9\n",
+      "600000 900000 10\n",
+      "900000 1200000 11\n",
+      "file: 3 - Duration: 1200000\n",
+      "0 300000 12\n",
+      "300000 600000 13\n",
+      "600000 900000 14\n",
+      "900000 1200000 15\n",
+      "file: 4 - Duration: 770351\n",
+      "0 300000 16\n",
+      "300000 600000 17\n",
+      "600000 900000 18\n",
+      "900000 1200000 19\n"
      ]
     }
    ],
    "source": [
     "# Cutting audio into 5 minutes slices\n",
+    "# if file duration is not multiple of 5 it simply will reduce the last file size automatically\n",
     "\n",
     "# How many files are there to slice??\n",
     "dir = \"../20_minutes_slice\"\n",
     "onlyfiles = next(os.walk(dir))[2] #dir is your directory path as string\n",
-    "#print (len(onlyfiles))\n",
+    "print ('Found ' + str(len([name for name in os.listdir(dir)])) + ' files to slice' )\n",
     "\n",
     "offset = 300000 # 300000 == 5 minutes -- calculate in milliseconds\n",
     "t1 = 0 \n",
     "t2 = offset\n",
+    "\n",
     "for i in range(len(onlyfiles)):\n",
     "    t1 = 0 \n",
     "    t2 = offset\n",
+    "    newAudio = AudioSegment.from_wav( dir + '/ISW_a_' + str(i) + '.wav')\n",
+    "    print(\"file: \"+ str(i) + \" - Duration: \" + str(len(newAudio)))\n",
+    "    \n",
     "    for j in range(4):\n",
-    "        t1 = ((i*4) + j) * offset #Works in milliseconds\n",
+    "        t1 = j * offset #Works in milliseconds\n",
     "        t2 = t1 + offset\n",
-    "        print(t1,t2, i)\n",
+    "        \n",
+    "        print(t1,t2, i*4+j)\n",
     "        newAudio = AudioSegment.from_wav( dir + '/ISW_a_' + str(i) + '.wav')\n",
     "        newAudio = newAudio[t1:t2]\n",
-    "        newAudio.export( dir + '/test/ISW_a_'+ str(i*4+j ) + '.wav', format=\"wav\") #Exports to a wav file in the current path."
+    "        newAudio.export( dir + '/test/ISW_a_'+ str(i*4+j ) + '.wav', format=\"wav\") #Exports to a wav file in the current path.        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 21 files to transcribe\n",
+      "10 seconds delay\n",
+      "Processing File: 3\n",
+      "File_3 - Google Speech Recognition could not understand audio\n",
+      "13 seconds delay\n",
+      "Processing File: 4\n",
+      "File_4 - Google Speech Recognition could not understand audio\n",
+      "14 seconds delay\n",
+      "Processing File: 5\n",
+      "File_5 - Google Speech Recognition could not understand audio\n",
+      "10 seconds delay\n",
+      "Processing File: 6\n",
+      "File_6 - Google Speech Recognition could not understand audio\n",
+      "15 seconds delay\n"
+     ]
+    }
+   ],
    "source": [
-    "# use the audio file as the audio source\n",
+    "# Transcribe from google APIs\n",
+    "\n",
+    "dir = \"../20_minutes_slice/test\"\n",
+    "onlyfiles = next(os.walk(dir))[2] #dir is your directory path as string\n",
+    "print ('Found ' + str(len([name for name in os.listdir(dir)])) + ' files to transcribe' )\n",
+    "\n",
     "r = sr.Recognizer()\n",
-    "with sr.AudioFile(dst) as source:\n",
-    "    audio = r.record(source)  # read the entire audio file\n",
     "\n",
-    "# recognize speech using Google Speech Recognition\n",
-    "try:\n",
-    "    # for testing purposes, we're just using the default API key\n",
-    "    # to use another API key, use `r.recognize_google(audio, key=\"GOOGLE_SPEECH_RECOGNITION_API_KEY\")`\n",
-    "    # instead of `r.recognize_google(audio)`\n",
-    "   \n",
-    "    print( r.recognize_google(audio, language=\"it-IT\") ) #ITALIAN\n",
-    "    #print( r.recognize_google(audio, show_all=True) ) #ENGLISH-US \n",
+    "result = [] # Output visualization\n",
     "\n",
-    "except sr.UnknownValueError:\n",
-    "    print(\"Google Speech Recognition could not understand audio\")\n",
-    "except sr.RequestError as e:\n",
-    "    print(\"Could not request results from Google Speech Recognition service; {0}\".format(e))\n"
+    "for i in range(len(onlyfiles)):\n",
+    "    if i > 2:\n",
+    "        delay = 5 + random.randint(5,10) \n",
+    "        print(str(delay) + \" seconds delay\")\n",
+    "        time.sleep(delay) # seconds\n",
+    "\n",
+    "        print('Processing File: ' + str(i))\n",
+    "        file_wav = dir + '/ISW_a_'+ str(i) + '.wav'\n",
+    "\n",
+    "        # use the audio file as the audio source\n",
+    "        with sr.AudioFile(file_wav) as source:\n",
+    "            audio = r.record(source)  # read the entire audio file\n",
+    "\n",
+    "        # recognize speech using Google Speech Recognition\n",
+    "        try:\n",
+    "            # for testing purposes, we're just using the default API key\n",
+    "            # to use another API key, use `r.recognize_google(audio, key=\"GOOGLE_SPEECH_RECOGNITION_API_KEY\")`\n",
+    "            # instead of `r.recognize_google(audio)`\n",
+    "\n",
+    "            file = open(dir + '/Text/ISW_a_'+ str(i) + '.txt',\"w+\")\n",
+    "            file.write(str(r.recognize_google(audio, language=\"it-IT\") )) #ITALIAN\n",
+    "            file.close()\n",
+    "\n",
+    "            result.append([i, True])\n",
+    "\n",
+    "            #print( r.recognize_google(audio, show_all=True) ) #ENGLISH-US \n",
+    "\n",
+    "        except sr.UnknownValueError:\n",
+    "            result.append([i, False])\n",
+    "            print('File_'+ str(i) + ' - Google Speech Recognition could not understand audio')\n",
+    "        except sr.RequestError as e:\n",
+    "            print(\"Could not request results from Google Speech Recognition service; {0}\".format(e))\n",
+    "\n",
+    "        \n",
+    "for res in result:\n",
+    "    print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '5min.wav'",
+     "ename": "NameError",
+     "evalue": "name 'dst' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-654d666fa1b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# use the audio file as the audio source\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRecognizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAudioFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0maudio\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# read the entire audio file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/speech_recognition/__init__.py\u001b[0m in \u001b[0;36m__enter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    238\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m             \u001b[0;31m# attempt to read the file as WAV\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 240\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maudio_reader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwave\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilename_or_fileobject\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    241\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlittle_endian\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m  \u001b[0;31m# RIFF WAV is a little-endian format (most ``audioop`` operations assume that the frames are stored in little-endian form)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    242\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mwave\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEOFError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.8/wave.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(f, mode)\u001b[0m\n\u001b[1;32m    508\u001b[0m             \u001b[0mmode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    509\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 510\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mWave_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    511\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    512\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mWave_write\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.8/wave.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f)\u001b[0m\n\u001b[1;32m    158\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_i_opened_the_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 160\u001b[0;31m             \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    161\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_i_opened_the_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m         \u001b[0;31m# else, assume it is an open file object already\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '5min.wav'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-38-654d666fa1b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# use the audio file as the audio source\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRecognizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAudioFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0maudio\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# read the entire audio file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dst' is not defined"
      ]
     }
    ],
@@ -153,49 +208,6 @@
     "    print(\"Sphinx could not understand audio\")\n",
     "except sr.RequestError as e:\n",
     "    print(\"Sphinx error; {0}\".format(e))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0 0\n",
-      "0 1 1\n",
-      "0 2 2\n",
-      "0 3 3\n",
-      "0 4 4\n",
-      "1 0 4\n",
-      "1 1 5\n",
-      "1 2 6\n",
-      "1 3 7\n",
-      "1 4 8\n",
-      "2 0 8\n",
-      "2 1 9\n",
-      "2 2 10\n",
-      "2 3 11\n",
-      "2 4 12\n",
-      "3 0 12\n",
-      "3 1 13\n",
-      "3 2 14\n",
-      "3 3 15\n",
-      "3 4 16\n",
-      "4 0 16\n",
-      "4 1 17\n",
-      "4 2 18\n",
-      "4 3 19\n",
-      "4 4 20\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(5):\n",
-    "    for j in range(5):\n",
-    "        print(i, j, (i*4) + j)\n"
    ]
   }
  ],
