--- a/SpeechRecognition.ipynb
+++ b/SpeechRecognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,42 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 6 files to slice\n",
-      "file: 0 - Duration: 1200000\n",
-      "0 300000 0\n",
-      "300000 600000 1\n",
-      "600000 900000 2\n",
-      "900000 1200000 3\n",
-      "file: 1 - Duration: 1200000\n",
-      "0 300000 4\n",
-      "300000 600000 5\n",
-      "600000 900000 6\n",
-      "900000 1200000 7\n",
-      "file: 2 - Duration: 1200000\n",
-      "0 300000 8\n",
-      "300000 600000 9\n",
-      "600000 900000 10\n",
-      "900000 1200000 11\n",
-      "file: 3 - Duration: 1200000\n",
-      "0 300000 12\n",
-      "300000 600000 13\n",
-      "600000 900000 14\n",
-      "900000 1200000 15\n",
-      "file: 4 - Duration: 770351\n",
-      "0 300000 16\n",
-      "300000 600000 17\n",
-      "600000 900000 18\n",
-      "900000 1200000 19\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cutting audio into 5 minutes slices\n",
     "# if file duration is not multiple of 5 it simply will reduce the last file size automatically\n",
@@ -111,19 +78,8 @@
      "output_type": "stream",
      "text": [
       "Found 21 files to transcribe\n",
-      "10 seconds delay\n",
-      "Processing File: 3\n",
-      "File_3 - Google Speech Recognition could not understand audio\n",
       "13 seconds delay\n",
-      "Processing File: 4\n",
-      "File_4 - Google Speech Recognition could not understand audio\n",
-      "14 seconds delay\n",
-      "Processing File: 5\n",
-      "File_5 - Google Speech Recognition could not understand audio\n",
-      "10 seconds delay\n",
-      "Processing File: 6\n",
-      "File_6 - Google Speech Recognition could not understand audio\n",
-      "15 seconds delay\n"
+      "Processing File: 4\n"
      ]
     }
    ],
@@ -139,7 +95,9 @@
     "result = [] # Output visualization\n",
     "\n",
     "for i in range(len(onlyfiles)):\n",
-    "    if i > 2:\n",
+    "    \n",
+    "    if i == 4:  # Pin point single files\n",
+    "    \n",
     "        delay = 5 + random.randint(5,10) \n",
     "        print(str(delay) + \" seconds delay\")\n",
     "        time.sleep(delay) # seconds\n",
@@ -178,21 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dst' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-654d666fa1b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# use the audio file as the audio source\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRecognizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAudioFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0maudio\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# read the entire audio file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dst' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use the audio file as the audio source\n",
     "r = sr.Recognizer()\n",
