git Ignore for media files

--- a/SpeechRecognition.ipynb
+++ b/SpeechRecognition.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -79,7 +79,9 @@
      "text": [
       "Found 21 files to transcribe\n",
       "13 seconds delay\n",
-      "Processing File: 4\n"
+      "Processing File: 3\n",
+      "File_3 - Google Speech Recognition could not understand audio\n",
+      "[3, False]\n"
      ]
     }
    ],
@@ -96,7 +98,7 @@
     "\n",
     "for i in range(len(onlyfiles)):\n",
     "    \n",
-    "    if i == 4:  # Pin point single files\n",
+    "    if i == 3:  # Pin point single files\n",
     "    \n",
     "        delay = 5 + random.randint(5,10) \n",
     "        print(str(delay) + \" seconds delay\")\n",
