--- a/Transcribe.ipynb
+++ b/Transcribe.ipynb
@@ -87,7 +87,7 @@
     "# Wit.AI APIs\n",
     "\n",
     "# authentication\n",
-    "access_token = 'NZ53DR2SUADO2PBLJONJI3H4OZZDB3AD'\n",
+    "access_token = 'Enter Wit.AI token Here'\n",
     "client = Wit(access_token)\n",
     "\n",
     "for j in range(len(audio) / offset):\n",
