--- a/transcribe.ipynb
+++ b/transcribe.ipynb
@@ -14,8 +14,13 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598088318194",
-   "display_name": "Python 3.8.5 64-bit ('data_science': conda)"
+   "name": "Python 3.8.5 64-bit ('data_science': conda)",
+   "display_name": "Python 3.8.5 64-bit ('data_science': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "25cb40b6f69fd4668d77d7835f5fb066f120671bb589d0b834f6cd2514f5442c"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -23,11 +28,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Enter YouTube video url: \nError : regex_search: could not find match for (?:v=|\\/)([0-9A-Za-z_-]{11}).*\n"
+    }
+   ],
    "source": [
     "# https://github.com/nficano/pytube\n",
     "import os\n",
