--- a/transcribe.ipynb
+++ b/transcribe.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.5 64-bit ('data_science': conda)",
-   "display_name": "Python 3.8.5 64-bit ('data_science': conda)",
+   "name": "python3",
+   "display_name": "Python 3.8.3 64-bit (conda)",
    "metadata": {
     "interpreter": {
-     "hash": "25cb40b6f69fd4668d77d7835f5fb066f120671bb589d0b834f6cd2514f5442c"
+     "hash": "d885f9e9c02b10b692b3709cb3c43df26c179de8de94be04c111b113634416fc"
     }
    }
   }
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -36,7 +36,10 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Enter YouTube video url: \nError : regex_search: could not find match for (?:v=|\\/)([0-9A-Za-z_-]{11}).*\n"
+     "text": [
+      "Enter YouTube video url: \n",
+      "Error : regex_search: could not find match for (?:v=|\\/)([0-9A-Za-z_-]{11}).*\n"
+     ]
     }
    ],
    "source": [
@@ -64,11 +67,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n",
+      "Select file to transcribe: \n",
+      "0 : idk.mp4\n",
+      "\n",
+      "Select language transcribing:\n",
+      "0 : en-US\n",
+      "1 : it-IT\n",
+      "Part 1 of 12 \t [ 0:00:00s : 0:00:03s ]\n",
+      "Part 2 of 12 \t [ 0:00:03s : 0:00:06s ]\n",
+      "Part 3 of 12 \t [ 0:00:06s : 0:00:09s ]\n",
+      "Google Speech Recognition could not understand audio\n",
+      "Part 4 of 12 \t [ 0:00:09s : 0:00:12s ]\n",
+      "Part 5 of 12 \t [ 0:00:12s : 0:00:15s ]\n",
+      "Part 6 of 12 \t [ 0:00:15s : 0:00:18s ]\n",
+      "Part 7 of 12 \t [ 0:00:18s : 0:00:21s ]\n",
+      "Part 8 of 12 \t [ 0:00:21s : 0:00:24s ]\n",
+      "Part 9 of 12 \t [ 0:00:24s : 0:00:27s ]\n",
+      "Part 10 of 12 \t [ 0:00:27s : 0:00:30s ]\n",
+      "Part 11 of 12 \t [ 0:00:30s : 0:00:33s ]\n",
+      "Part 12 of 12 \t [ 0:00:33s : 0:00:36s ]\n",
+      "Google Speech Recognition could not understand audio\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/env python3\n",
     "import os\n",
