--- a/transcribe_subs.ipynb
+++ b/transcribe_subs.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.5 64-bit ('data_science': conda)",
-   "display_name": "Python 3.8.5 64-bit ('data_science': conda)",
+   "name": "python3",
+   "display_name": "Python 3.8.3 64-bit (conda)",
    "metadata": {
     "interpreter": {
-     "hash": "25cb40b6f69fd4668d77d7835f5fb066f120671bb589d0b834f6cd2514f5442c"
+     "hash": "d885f9e9c02b10b692b3709cb3c43df26c179de8de94be04c111b113634416fc"
     }
    }
   }
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -36,7 +36,10 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Enter YouTube video url to Download: \n\nVideo Title:\nRoasting a TikToker in 60 Seconds (@spencergatewood1) #shorts\n\n..Downloading..\n\n # Done # \n"
+     "text": [
+      "Enter YouTube video url to Download: \n",
+      "Error : get_ytplayer_config: could not find match for config_patterns\n"
+     ]
     }
    ],
    "source": [
@@ -48,8 +51,7 @@
     "url = str(input())\n",
     "\n",
     "if not os.path.exists('input'):\n",
-    "    os.makedirs('input')\n",
-    "    \n",
+    "    os.makedirs('input')    \n",
     "input_folder = os.path.join(os.getcwd(), \"input\")\n",
     "\n",
     "try:\n",
@@ -67,17 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "\nSelect file to transcribe: \n0 : Roasting a TikToker in 60 Seconds (@spencergatewood1) shorts.mp4\n0\n\nSelect language transcribing:\n0 : en-US\n1 : it-IT\n0\nPart 1 of 16 \t [ 0:00:00s : 0:00:03s ]\nPart 2 of 16 \t [ 0:00:03s : 0:00:06s ]\nPart 3 of 16 \t [ 0:00:06s : 0:00:09s ]\nPart 4 of 16 \t [ 0:00:09s : 0:00:12s ]\nPart 5 of 16 \t [ 0:00:12s : 0:00:15s ]\nPart 6 of 16 \t [ 0:00:15s : 0:00:18s ]\nPart 7 of 16 \t [ 0:00:18s : 0:00:21s ]\nPart 8 of 16 \t [ 0:00:21s : 0:00:24s ]\nPart 9 of 16 \t [ 0:00:24s : 0:00:27s ]\nPart 10 of 16 \t [ 0:00:27s : 0:00:30s ]\nPart 11 of 16 \t [ 0:00:30s : 0:00:33s ]\nPart 12 of 16 \t [ 0:00:33s : 0:00:36s ]\nPart 13 of 16 \t [ 0:00:36s : 0:00:39s ]\nPart 14 of 16 \t [ 0:00:39s : 0:00:42s ]\nPart 15 of 16 \t [ 0:00:42s : 0:00:45s ]\nPart 16 of 16 \t [ 0:00:45s : 0:00:48s ]\nDone\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!/usr/bin/env python3\n",
     "import os\n",
