correct input folder

--- a/Speech_Recognition.ipynb
+++ b/Speech_Recognition.ipynb
@@ -61,7 +61,7 @@
         "\n",
         "input_folder = os.path.join(os.getcwd(), \"input\")\n",
         "\n",
-        "file_list = os.listdir(path_input)\n",
+        "file_list = os.listdir(input_folder)\n",
         "\n",
         "try:\n",
         "    ytd = pytube.YouTube(url)\n",
